changes to asterisk.conf

--- a/2.3.1-1.noarch/var/www/html/aastra/config/asterisk.conf
+++ b/2.3.1-1.noarch/var/www/html/aastra/config/asterisk.conf
@@ -33,7 +33,7 @@ pw_user=
 logout_pw_enabled=
 # Auto-logout enabled or disabled in "extensions" mode (optional). Default is enabled (1), 0 for disabled
 # aastra-daemon2 must be restarted if you change this parameter
-autologout_enabled=
+autologout_enabled=0
 # Auto-logout idle screen message enabled or disabled in "extensions" mode (optional). Default is enabled (1), 0 for disabled
 autologout_message=
 
