added 6867i to key.ini

--- a/2.3.1-1.noarch/var/www/html/aastra/asterisk/key.ini
+++ b/2.3.1-1.noarch/var/www/html/aastra/asterisk/key.ini
@@ -83,6 +83,18 @@ bottom key number=55
 bottom key per page=11
 modules=1
 
+[Aastra6867i]
+bottom key=1
+bottom key type=softkey
+bottom key number=20
+bottom key per page=20
+top key=1
+top key type=topsoftkey
+top key number=20
+top key per page=20
+defaulted keys=topsoftkey1,topsoftkey2,topsoftkey3,topsoftkey4
+modules=1
+
 [Aastra8000i]
 bottom key=1
 bottom key type=softkey
