--- a/2.3.1-1.noarch/var/www/html/aastra/config/asterisk.conf
+++ b/2.3.1-1.noarch/var/www/html/aastra/config/asterisk.conf
@@ -28,7 +28,7 @@ sender=
 # Admin password for self-configuration, must be a number. Used in 'extensions' mode
 pw_admin=
 # User password for self-configuration, must be a number. Used when user has no voicemail in 'extensions' mode.
-pw_user=
+pw_user=222221
 # Request password for Logout in "extensions" mode (optional). Default is enabled (1), 0 for disabled
 logout_pw_enabled=
 # Auto-logout enabled or disabled in "extensions" mode (optional). Default is enabled (1), 0 for disabled
